# bok-drone-onboard-system

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt
.junie/: guidelines.md
bok_drone_onboard_system/: bno08x_acquire.py  survey_acquire.py  survey_analyse.py
bok_drone_onboard_system/analysis/: __init__.py
bok_drone_onboard_system/bno/: __init__.py
bok_drone_onboard_system/bno/data/: __init__.py
bok_drone_onboard_system/experiments/: survey_measure_avg.py  vector-error.py  vector_error.py
bok_drone_onboard_system/positioner/: __init__.py  projector.py
bok_drone_onboard_system/survey/: __init__.py  emlid_reader.py
bok_drone_onboard_system/survey/analysis/: __init__.py  gps.py
bok_drone_onboard_system/survey/data/: __init__.py
bok_drone_onboard_system/survey/gps/: __init__.py
bok_drone_onboard_system/tests/positioner/: test_positioner.py
bok_drone_onboard_system/tests/positioner/test_resources/: 135-north.txt  45-north.txt  45-south.txt  flat-east.txt  flat-south.txt
bok_survey/: __init__.py  survey_acquire.py
docs/: emlid_device_detection.md  tasks.md
docs/experiments/: survey-angled-pole.md
tests/analysis/: test_gps.py
tests/positioner/: test_positioner.py  test_projector.py
tests/positioner/test_resources/: 45-east.txt  90-east.txt  90-north.txt  __init__.py  flat-north.txt
tests/survey/: test_emlid_reader.py  test_gps.py  test_survey_analyse.py
tests/survey/analysis/: test_gps.py
tests/survey/data/: test_data.py
